--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">NITIN SHARMA</a>
+        <a href="https://html.design/">Manav Rachna</a>
       </p>
     </div>
   </section>
