--- a/CONTACTUS.html
+++ b/CONTACTUS.html
@@ -233,7 +233,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">NITIN SHARMA</a>
+        <a href="https://html.design/">Manav Rachna</a>
       </p>
     </div>
   </section>
