--- a/callforpaper.html
+++ b/callforpaper.html
@@ -93,6 +93,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="CONTACTUS.html">Contact us</a>
                     </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="commitee.html">Committee</a>
+                    </li>
                   </ul>
                 </div>
               </nav>
