--- a/commitee.html
+++ b/commitee.html
@@ -93,6 +93,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="CONTACTUS.html">Contact us</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="commitee.html">Committee</a>
+                      </li>
                   </ul>
                 </div>
               </nav>
@@ -219,6 +222,9 @@
                 <a class="" href="CONTACTUS.html">
                   Contact Us
                 </a>
+                <a class="" href="commitee.html">
+                    Committee
+                  </a>
               </div>
             </div>
           </div>
