--- a/callforpaper.html
+++ b/callforpaper.html
@@ -242,6 +242,9 @@
               <a class="" href="CONTACTUS.html">
                 Contact Us
               </a>
+              <a class="" href="commitee.html">
+                Committee
+              </a>
             </div>
           </div>
         </div>
