--- a/commitee.html
+++ b/commitee.html
@@ -253,7 +253,7 @@
         
         </table>
     
-        <h1>Technical Program Committee</h1>
+        <h2>Technical Program Committee</h2>
         <h3>International</h3>
         <table>
           <thead>
@@ -296,7 +296,7 @@
               <tr><td>Mr. Vijender Dagar</td><td>Data Architect IT, Ericsson India Global Services Pvt. Ltd., India</td></tr>
           </tbody>
         </table>
-        <h3>National Faculty Table</h3>
+        <h3>National</h3>
             <table>
             <tbody>
               <thead>
